[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/PlayerHUD/PlayerHUD.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.623529, 1, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 0.560784, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=3]
Panel/styles/panel = SubResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )

[node name="TimeLabel" type="Label" parent="Control"]
anchor_right = 1.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "5:00"
align = 1
valign = 1

[node name="LagLabel" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -226.0
margin_top = -38.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "LAG DETECTED"

[node name="EngamePanel" type="Panel" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -236.0
margin_right = 192.0
margin_bottom = 212.0

[node name="MarginContainer" type="MarginContainer" parent="Control/EngamePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/EngamePanel/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 369.0
margin_bottom = 433.0

[node name="Label" type="Label" parent="Control/EngamePanel/MarginContainer/VBoxContainer"]
margin_right = 354.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Match result"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Control/EngamePanel/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 354.0
margin_bottom = 46.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/EngamePanel/MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 354.0
margin_bottom = 69.0

[node name="UsernameLabel" type="Label" parent="Control/EngamePanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 165.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
text = "Username"

[node name="VSeparator" type="VSeparator" parent="Control/EngamePanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 169.0
margin_right = 173.0
margin_bottom = 19.0

[node name="KillsLabel" type="Label" parent="Control/EngamePanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 259.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 4 )
text = "Kills"

[node name="VSeparator2" type="VSeparator" parent="Control/EngamePanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 263.0
margin_right = 267.0
margin_bottom = 19.0

[node name="DeathsLabel" type="Label" parent="Control/EngamePanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 271.0
margin_right = 354.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 4 )
text = "Deaths"

[node name="HSeparator2" type="HSeparator" parent="Control/EngamePanel/MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 354.0
margin_bottom = 77.0

[node name="Containers" type="HBoxContainer" parent="Control/EngamePanel/MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 354.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UsernameC" type="VBoxContainer" parent="Control/EngamePanel/MarginContainer/VBoxContainer/Containers"]
margin_right = 165.0
margin_bottom = 289.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="Control/EngamePanel/MarginContainer/VBoxContainer/Containers"]
margin_left = 169.0
margin_right = 173.0
margin_bottom = 289.0

[node name="KillsC" type="VBoxContainer" parent="Control/EngamePanel/MarginContainer/VBoxContainer/Containers"]
margin_left = 177.0
margin_right = 259.0
margin_bottom = 289.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VSeparator2" type="VSeparator" parent="Control/EngamePanel/MarginContainer/VBoxContainer/Containers"]
margin_left = 263.0
margin_right = 267.0
margin_bottom = 289.0

[node name="DeathsC" type="VBoxContainer" parent="Control/EngamePanel/MarginContainer/VBoxContainer/Containers"]
margin_left = 271.0
margin_right = 354.0
margin_bottom = 289.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="LobbyButton" type="Button" parent="Control/EngamePanel/MarginContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 354.0
margin_bottom = 418.0
custom_fonts/font = SubResource( 1 )
text = "BACK TO LOBBY"

[node name="ErrorPanel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -236.0
margin_right = 192.0
margin_bottom = 212.0

[node name="MarginContainer" type="MarginContainer" parent="Control/ErrorPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ErrorPanel/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 369.0
margin_bottom = 433.0

[node name="Label" type="Label" parent="Control/ErrorPanel/MarginContainer/VBoxContainer"]
margin_right = 354.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "An error occured"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Control/ErrorPanel/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 354.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/ErrorPanel/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 98.0
margin_top = 149.0
margin_right = 255.0
margin_bottom = 178.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Error message"

[node name="LobbyButton" type="Button" parent="Control/ErrorPanel/MarginContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 354.0
margin_bottom = 418.0
custom_fonts/font = SubResource( 1 )
text = "BACK TO LOBBY"

[connection signal="pressed" from="Control/EngamePanel/MarginContainer/VBoxContainer/LobbyButton" to="." method="_on_LobbyButton_pressed"]
[connection signal="pressed" from="Control/ErrorPanel/MarginContainer/VBoxContainer/LobbyButton" to="." method="_on_LobbyButton_pressed"]
